--- a/utils/language/es.json
+++ b/utils/language/es.json
@@ -3,5 +3,6 @@
     "UPDATED":  "Actualización exitosa",
     "DELETE":   "Eliminación exitosa",
     "USER_EXIST":   "El usuario presenta un prestamos en estado pendiente o en mora",
-    "ERROR_LOGIN" : "El usuario o contraseña no son correctos, intente nuevamente"
+    "ERROR_LOGIN" : "El usuario o contraseña no son correctos, intente nuevamente",
+    "CLIENT_NOT_EXIST": "La identificacion no puede estar vacia"
 }
